--- a/BookCathalogSrc/BookCathalog.csproj
+++ b/BookCathalogSrc/BookCathalog.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="LiteDB" Version="5.0.12" />
     <PackageReference Include="Prism.Unity" Version="8.1.97" />
     <PackageReference Include="Prism.Wpf" Version="8.1.97" />
+    <PackageReference Include="xunit" Version="2.4.2" />
   </ItemGroup>
 
   <ItemGroup>
